Fixed music card display on mobile in music page

--- a/src/app/musics/musics.module.scss
+++ b/src/app/musics/musics.module.scss
@@ -83,9 +83,7 @@
       width: 200px;
       @include respond(mobile-screen) {
         width: 100%;
-        & div:first-child {
-          width: 90%;
-        }
+        height: fit-content;
       }
     }
   }
